# tube-rate

./: .gitignore
api/: README.md  main.py  pyproject.toml
api/src/: dependencies.py
api/src/repository/: youtube_api.py
api/src/routers/: videos.py
api/src/schemas/: videos.py
front/: index.html  style.css
