[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Yasuto1218 <94950313+Yasuto1218@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
fastapi = "^0.100.0"
google-api-python-client = "^2.93.0"
notebook = "^6.5.4"
uvicorn = "^0.23.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
